samples/_failures_safe/1761537235_1ef117_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f05fe2c6.c: In function ‘main’:
./samples/SAFE/__tmp_f05fe2c6.c:152:12: error: missing terminating " character
  152 |     printf("
      |            ^
./samples/SAFE/__tmp_f05fe2c6.c:152:5: error: expected expression at end of input
  152 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_f05fe2c6.c:152:5: error: expected declaration or statement at end of input
